--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,9 @@
 # in the templates via {{ site.myvariable }}.
 title: "Les nouvelles: écrire en français"
 author: "Kenrick"
-email: your-email@domain.com
+email:
 description: > # this means to ignore newlines until "baseurl:"
-  This site is currently under construction and will house my daily French
-  short journal entries that I'm writing to improve my French.
+  This is a description of my site.
 baseurl: "/blog-francais/" # the subpath of your site, e.g. /blog
 url: "https://kenrickj.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
