--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author: "Kenrick"
 email:
 description: > # this means to ignore newlines until "baseurl:"
   This is a description of my site.
-baseurl: "/blog-francais/" # the subpath of your site, e.g. /blog
+baseurl: "/blog-francais" # the subpath of your site, e.g. /blog
 url: "https://kenrickj.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username: kenrickj
